--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,13 +1,3 @@
-@import "tailwindcss";
-@plugin "daisyui";
-
-
-
-/* @plugin "daisyui" {
-    themes: light --default, dark --prefersdark;
-    root: ":root";
-    include: ;
-    exclude: ;
-    prefix: ;
-    logs: true;
-  } */
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
